--- a/run_tdcalc.ipynb
+++ b/run_tdcalc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,9 +20,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading matlab_source/FS_simple.mat\n",
+      "displacements for 1000 points generated in 0.001483 seconds\n",
+      "time rel. to MATLAB:  0.24078207582820088\n",
+      "strains for 1000 points generated in 0.001820 seconds\n",
+      "time rel. to MATLAB:  0.27209277851936753\n",
+      "Test success!\n",
+      "\n",
+      "loading matlab_source/FS_complex.mat\n",
+      "displacements for 1000 points generated in 0.000965 seconds\n",
+      "time rel. to MATLAB:  0.12329294567050232\n",
+      "strains for 1000 points generated in 0.001741 seconds\n",
+      "time rel. to MATLAB:  0.5089130366886482\n",
+      "Test success!\n",
+      "\n",
+      "loading matlab_source/HS_simple.mat\n",
+      "displacements for 1000 points generated in 0.006278 seconds\n",
+      "time rel. to MATLAB:  0.12517789230276433\n",
+      "strains for 1000 points generated in 0.043401 seconds\n",
+      "time rel. to MATLAB:  0.2913050387271779\n",
+      "Test success!\n",
+      "\n",
+      "loading matlab_source/HS_complex.mat\n",
+      "displacements for 1000 points generated in 0.006028 seconds\n",
+      "time rel. to MATLAB:  0.5740464791502962\n",
+      "strains for 1000 points generated in 0.042890 seconds\n",
+      "time rel. to MATLAB:  0.4534046791370649\n",
+      "Test success!\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# run automated tests and print timing information\n",
     "test_tdcalc.test_all(-1)"
@@ -30,9 +65,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dispFS [[-0.00090737 -0.0001836  -0.00176303]]\n",
+      "dispHS [[ 0.00017034  0.00076251 -0.00046315]]\n",
+      "strainFS [[-2.10533296e-04 -4.84572014e-04  7.10544358e-04 -5.03624698e-04\n",
+      "   1.48433869e-04 -2.68177238e-05]]\n",
+      "strainHS [[ 1.25577298e-04 -3.98975305e-04  2.99690430e-04 -1.09775085e-04\n",
+      "   2.92379647e-04  9.72935129e-05]]\n"
+     ]
+    }
+   ],
    "source": [
     "# example 1: run each function to generate displacements and strains at one point\n",
     "obs = np.array([-3,-3,-3])\n",
@@ -54,9 +102,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3)\n",
+      "displ [[ 0.00017034  0.00076251 -0.00046315]\n",
+      " [ 0.00229165 -0.00095948  0.00019395]] (2, 3)\n",
+      "strain [[ 1.25577298e-04 -3.98975305e-04  2.99690430e-04 -1.09775085e-04\n",
+      "   2.92379647e-04  9.72935129e-05]\n",
+      " [ 7.13092695e-05 -1.38262001e-03  4.37103580e-04  1.03371274e-03\n",
+      "  -2.41528903e-18  3.47486592e-18]] (2, 6)\n"
+     ]
+    }
+   ],
    "source": [
     "#example 2: generate half-space displacements and strains at two points\n",
     "obs=np.array([[-3,-3,-3],[4,-3,0]])\n",
@@ -70,6 +132,13 @@
     "print('strain',strain, np.shape(strain))\n",
     "# note that the last two components, Exz and Eyz are zero for points at the surface, as expected"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -88,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
